Fix alignment

--- a/less/components/containers.less
+++ b/less/components/containers.less
@@ -48,10 +48,12 @@ footer.stick-to-fold {
         display: table-cell;
         width: @primary_container_width;
         padding-right: (@gutter * 2);
+        vertical-align: top;
     }
     div.secondary {
         display: table-cell;
         width: @secondary_container_width;
+        vertical-align: top;
     }
 }
 
